fix bearer token
